--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "@types/react-dom": "^18.0.9",
     "axios": "^1.2.0",
     "daisyui": "^2.41.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-query": "^3.39.2",
@@ -47,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.8.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "sass": "^1.56.1",
